<resources>
    <string name="app_name">Cosmic Ink</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="welcome">Welcome</string>
    <string name="select_purpose">Select your purpose from below</string>
    <string name="court_session">Court Session</string>
    <string name="therapy">Therapy</string>
    <string name="lecture">Lecture</string>
    <string name="custom">Custom</string>
    <string name="select_url">Select an option and enter the URL</string>
    <string name="url">URL</string>
    <string name="analyse_video">Analyse Video</string>
    <string name="analyse_audio">Analyse Audio</string>
    <string name="join_a_meeting">Join a meeting</string>
    <string name="go">Go</string>
    <string name="phone_number">Phone Number</string>
    <string name="dtmf">DTMF code</string>
    <string name="email_address">Email Address</string>
    <string name="or">OR</string>
    <string name="enter_conversation_id">Enter conversation ID</string>
    <string name="connect">Connect</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tab_text_1">Messages</string>
    <string name="tab_text_2">Topics</string>
    <string name="tab_text_3">Questions</string>
    <string name="tab_text_4">Actions</string>
    <string name="tab_text_5">Follow-Ups</string>
    <string name="all_conversations">All Conversations</string>
    <string name="conversation_details">Conversation Details</string>
    <string name="conversation_analytics">Conversation Analytics</string>
</resources>